feat: connected esp to website

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.10.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mqtt": "^5.5.0",
     "nodemon": "^3.1.0",
     "ws": "^8.16.0"
   }
